# c226i

./: .env.example  .firebaserc.example  .gitignore  ENGINEERING_AUDIT.md  MACOS_SUPPORT.md  PROJECT_STATE.md  README.md  WINDOWS_SUPPORT.md  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  index.html  package-lock.json  package.json  storage.rules  tailwind.config.ts  vite.config.ts
.github/workflows/: release.yml
cloudflare/: .gitignore  README.md  package-lock.json  package.json  wrangler.toml
cloudflare/migrations/: 0001_initial.sql  0002_reservations.sql  (+1 more)
cups/: README.md
docs/: CLOUD_ARCHITECTURE.md  FIREBASE_CLOUD_ARCHIVE.md  FIREBASE_STAGING_DEPLOYMENT.md
functions/: package-lock.json  package.json  tsconfig.json
history/: README.md
installers/: README.md
native-macos/: README.md
pdf/: README.md
printer-core/: README.md
printer-profiles/: README.md
scripts/: firebase-deploy.mjs  verify-release-config.mjs
settings/: README.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: booklet.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/cups/: client.rs  mod.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/google_drive/: archive.rs  mod.rs  models.rs  oauth.rs  shared_drive.rs  token_store.rs
src-tauri/src/models/: cloud_document.rs  diagnostics.rs  mod.rs  print.rs  printer.rs
src-tauri/src/parser/: lpoptions.rs  lpstat.rs  mod.rs
src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src-tauri/src/printer/: capabilities.rs  mod.rs  print_options.rs
ui/: README.md
(+170 files in other folders)
